// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Col renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .cache-ppfx3f-Col {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 32px;
  padding-right: 32px;
}

<div
    class="cache-ppfx3f-Col efyj23m0"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1l0hyn9-Col {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="cache-1l0hyn9-Col efyj23m0"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as auto 1`] = `
<DocumentFragment>
  .cache-1m8lp57-Col {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .cache-1m8lp57-Col {
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    max-width: none;
    width: auto;
  }
}

<div
    class="cache-1m8lp57-Col efyj23m0"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as bool 1`] = `
<DocumentFragment>
  .cache-19d4fuv-Col {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .cache-19d4fuv-Col {
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: 100%;
  }
}

<div
    class="cache-19d4fuv-Col efyj23m0"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly with responsive as number 1`] = `
<DocumentFragment>
  .cache-1a3dtcy-Col {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 768px) {
  .cache-1a3dtcy-Col {
    -webkit-flex: 0 0 33.3333%;
    -ms-flex: 0 0 33.3333%;
    flex: 0 0 33.3333%;
    max-width: 33.3333%;
  }
}

<div
    class="cache-1a3dtcy-Col efyj23m0"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Col renders correctly without responsive when smallest breakpoint 1`] = `
<DocumentFragment>
  .cache-1bfpdij-Col {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
}

<div
    class="cache-1bfpdij-Col efyj23m0"
  >
    Sample Col
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly when fluid 1`] = `
<DocumentFragment>
  .cache-53af2b-Grid {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="cache-53af2b-Grid em1vjd40"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .cache-1xbrnyv-Grid {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 32px;
  padding-right: 32px;
}

@media (min-width: 576px) {
  .cache-1xbrnyv-Grid {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .cache-1xbrnyv-Grid {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .cache-1xbrnyv-Grid {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .cache-1xbrnyv-Grid {
    max-width: 1140px;
  }
}

<div
    class="cache-1xbrnyv-Grid em1vjd40"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Grid renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-oek709-Grid {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width: 576px) {
  .cache-oek709-Grid {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .cache-oek709-Grid {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .cache-oek709-Grid {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .cache-oek709-Grid {
    max-width: 1140px;
  }
}

<div
    class="cache-oek709-Grid em1vjd40"
  >
    Sample Grid
  </div>
</DocumentFragment>
`;

exports[`Grid Row renders correctly with custom gutter 1`] = `
<DocumentFragment>
  .cache-xnsenu-Row {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -32px;
  margin-right: -32px;
}

<div
    class="cache-xnsenu-Row e1uuye5o0"
  >
    Sample Row
  </div>
</DocumentFragment>
`;

exports[`Grid Row renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1y523aw-Row {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -8px;
  margin-right: -8px;
}

<div
    class="cache-1y523aw-Row e1uuye5o0"
  >
    Sample Row
  </div>
</DocumentFragment>
`;
